# UnityAutorig

./: .gitignore  CMakeLists.txt  README.md
AttachWeights/: CMakeLists.txt
DemoUI/: CMakeLists.txt  processor.cpp
Pinocchio/: CMakeLists.txt  dtree.h  hashutils.h  lsqSolver.cpp  matrix.h  mesh.cpp  mesh.h  pinocchioApi.cpp  pinocchioApi.h  quaddisttree.h  rect.h  skeleton.cpp  vector.h
SampleProject/: .gitignore
SampleProject/Assets/: AutoRig.cs
SampleProject/Assets/Plugins/UnityAutoRig.bundle/Contents/: Info.plist
SampleProject/Assets/Plugins/UnityAutoRig.bundle/Contents/MacOS/: UnityAutoRig
SampleProject/Assets/Scenes/: SampleScene.unity
SampleProject/ProjectSettings/: ProjectSettings.asset
UnityPlugin/: CMakeLists.txt  plugin.cpp  plugin.h
